# pazaak

./: CMakeLists.txt  autogen.txt  button.cpp  button.h  card.cpp  card.h  constants.h  helpers.h  main.cpp  pazaak.cpp  pazaak.h  player.cpp  player.h
